--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
   <br>
   <div class="seifbb">
     <button class="seifb">
-      <a href="https://zainahmed02.github.io/seifee/" target="_blank" style="color: white;
+      <a href="https://98seif.github.io/CCCCC/" target="_blank" style="color: white;
     text-decoration: none;">حجز التذاكر </a>
     </button>
   </div>
