--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </button>
 
 
-  <button onclick="window.open('https://fatima-labana.github.io/fatima1/contact-us.html', '_blank')" style="
+  <button onclick="window.open('https://fatima-labana.github.io/late/contact-us.html', '_blank')" style="
   background-color: rgb(37, 37, 183);
   color: white;
   font-size: medium;
