--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@
       <!-- الحضاره اليونانيه  -->
       <a title=" سبحان الله ">
         <div class="card">
-          <img src="https://fatima-labana.github.io/late/"
+          <img src="https://i.pinimg.com/originals/2d/dd/e7/2ddde752d9a5635655da50732bceef64.jpg"
             alt="الحضارة اليونانية" />
 
           <p>الحضارة اليونانية</p>
-          <button onclick=""> <a href="https://fatima-labana.github.io/fatima1/" target="_blank" style="color: white;
+          <button onclick=""> <a href="https://fatima-labana.github.io/late/" target="_blank" style="color: white;
     text-decoration: none;">انقر هنا </a></button>
         </div>
       </a>
