--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   </button>
 
-  <button onclick="window.open('https://98seif.github.io/CCCCC/', '_blank')" style="
+  <button onclick="window.open('https://student-974.github.io/tickpage/', '_blank')" style="
     background-color: rgb(37, 37, 183);
     color: white;
     font-size: medium;
@@ -232,7 +232,7 @@
   <br>
   <div class="seifbb">
     <button class="seifb">
-      <a href="https://98seif.github.io/CCCCC/" target="_blank" style="color: white;
+      <a href="https://student-974.github.io/tickpage/" target="_blank" style="color: white;
     text-decoration: none;">حجز التذاكر </a>
     </button>
   </div>
